--- a/web/pizzastyle.css
+++ b/web/pizzastyle.css
@@ -1,15 +1,16 @@
 table{
 	border:1px solid blue;
 	border-collapse:collapse;
-	background-image:url("pizza.png");
+	/*background-image:url("pizza.png");*/
 }
 td{
 	padding:10px;
 	border:1px solid blue;
 	text-align:left;
 }
-img{
+/*img{
 	height: 60px;
 	width: 60px;
 	opacity:0.3;
-}
+	filter:alpha(opacity=30);
+}*/
